Bug 435029 - Do not display maximize button when only one splitter is active
Summary: Do not display maximize button when only one splitter is active
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: split-view (other bugs)
Version First Reported In: 20.12.3
Platform: Other Other
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-03-27 17:57 UTC by Rind
Modified: 2022-01-04 20:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (14.65 KB, image/png)
2021-03-27 17:57 UTC, Rind
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rind 2021-03-27 17:57:14 UTC
Created attachment 137109 [details]
screenshot

SUMMARY
This is just a bug report of a visual detail

STEPS TO REPRODUCE
1. Open the konsole settings
2. Go to Tab Bar / Dividers (3rd option)
3. In the tab Dividers -> Show Header, check "Always". 

OBSERVED RESULT
Now that the divider will always be displayed, the maximize button will also be active, although it has no function when there is only one divider

EXPECTED RESULT
This button should not be displayed since it has no function in this scenario

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.11.9-arch1-1
OS Type: 64-bit
Graphics Platform: X11

ADDITIONAL INFORMATION
My system is in Portuguese, so I'm translating "Divisões" to "divisions" but I think it could be "splits" too.
Comment 1 Bug Janitor Service 2022-01-03 13:18:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/571
Comment 2 Alfonso Murolo 2022-01-03 13:19:56 UTC
Hi, I thought I could provide a way to fix this. I have started the MR at https://invent.kde.org/utilities/konsole/-/merge_requests/571
Comment 3 Kurt Hindenburg 2022-01-04 20:41:31 UTC
Git commit 1a89e3baae7794a77977c4524bc520f3db2be703 by Kurt Hindenburg, on behalf of Alfonso Murolo.
Committed on 04/01/2022 at 20:41.
Pushed by hindenburg into branch 'master'.

Only enable maximize terminal button in split header bar when usable

Disable the maximize terminal button when there is only one split
in a tab.

M  +4    -1    src/widgets/TerminalHeaderBar.cpp

https://invent.kde.org/utilities/konsole/commit/1a89e3baae7794a77977c4524bc520f3db2be703