Only enable maximize terminal button in split header bar when usable

Disable the maximize terminal button when there is only one split
in a tab.

BUG: 435029